--- a/lorem.html
+++ b/lorem.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam, assumenda, possimus accusamus sequi quas nostrum omnis voluptatibus inventore amet necessitatibus quo aut tempore consequatur neque sit officiis dignissimos eum numquam.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+        Magnam, assumenda, possimus accusamus sequi quas nostrum 
+        omnis voluptatibus inventore amet necessitatibus quo aut 
+        tempore consequatur neque sit officiis dignissimos eum numquam.
     </p>
 </body>
 </html>
