--- a/texto.html
+++ b/texto.html
@@ -8,6 +8,12 @@
 <body>
     <script>
         alert("to alterado");
+        const mds = (x) =>{
+            console.log(x);
+        }
+        for(var i = 0; i<10; i++){
+            mds(i);
+        }
     </script>
 </body>
 </html>
